# Unpadded

./: .Doxyfile.swp  .buildinfo  .clang-format  .clang-tidy  .gitignore  .gitmodules  .swp  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  LICENSE  MANIFEST.in  README.md  callee.html  caller.html  check  configure  genindex.html  index.html  makefile  objects.inv  pyproject.toml  python.html  search.html  searchindex.js  serialization.html  setup.py  shared.html
.doctrees/: callee.doctree  caller.doctree  environment.pickle  index.doctree  python.doctree  serialization.doctree  shared.doctree
.github/workflows/: build-doc.yml  c-cpp.yml  clang-format.yml  code-quality.yml  pip-install.yml  test-clang-10.yml  test-clang-11.yml  test-gcc-10.yml  test-gcc-11.yml
_sources/: callee.rst.txt  caller.rst.txt  index.rst.txt  python.rst.txt  serialization.rst.txt  shared.rst.txt
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  callee.rst.in  caller.rst.in  conf.py  conf.py.in  index.rst  index.rst.in  python.rst.in  serialization.rst.in  shared.rst.in
include/: CMakeLists.txt  endianess.hpp  storage.hpp  type.hpp
include/k2o/: action.hpp  buffered_dispatcher.hpp  cpp11.hpp  dispatcher.hpp  flist.hpp  fwd.hpp  ikey.hpp  key.hpp  key_base.hpp  keyring.hpp  keyring11.hpp  order.hpp  policy.hpp  status.hpp  ticket.hpp  type.hpp  unevaluated.hpp
include/k2o/detail/: any_function.hpp  def.hpp  find_in_typelist.hpp  function_reference.hpp  fwd.hpp  input_tuple.hpp  io.hpp  normalize_to_tuple.hpp  serialized_message.hpp  sfinae.hpp  sfinae_failure.hpp  signature.hpp  smallest.hpp  static_error.hpp  type_traits.hpp  typelist.hpp  undef.hpp  unevaluated.hpp  unique_ptr.hpp  value_h.hpp
include/k2o/detail/io/: immediate_process.hpp  immediate_writer.hpp  reader.hpp  writer.hpp
include/k2o/detail/type_traits/: has_signature.hpp  input_tuple.hpp  is_keyring.hpp  is_tuple.hpp  remove_cv_ref.hpp  require.hpp  signature.hpp  smallest.hpp  typelist.hpp
include/upd/: action.hpp  array_wrapper.hpp  basic_ibytestream.hpp  basic_tuple.hpp  buffered_dispatcher.hpp  dispatcher.hpp  flist.hpp  format.hpp  fwd.hpp  index_type.hpp  key.hpp  keyring.hpp  placeholder.hpp  policy.hpp  python.hpp  serialization.hpp  sfinae.hpp  span.hpp  static_vector.hpp  storage.hpp  tuple.hpp  type.hpp  typelist.hpp  unaligned_data.hpp  unevaluated.hpp  upd.hpp
include/upd/detail/: always_false.hpp  any_function.hpp  assertion.hpp  convert_placeholder.hpp  def.hpp  endianess.hpp  fail_on_invoke.hpp  function_reference.hpp  instantiate_from.hpp  integral_constant.hpp  is_bounded_array.hpp  is_instance_of.hpp  is_iterable.hpp  is_serializable_object.hpp  serialization.hpp  serialized_message.hpp  serialized_size.hpp  sfinae.hpp  signature.hpp  signed_representation.hpp  static_error.hpp  tuple_operations.hpp  undef.hpp  value_h.hpp
include/upd/detail/io/: immediate_process.hpp  immediate_reader.hpp  immediate_writer.hpp  reader.hpp  writer.hpp
include/upd/detail/type_traits/: conjunction.hpp  detector.hpp  flatten_tuple.hpp  index_sequence.hpp  input_tuple.hpp  is_array.hpp  is_byte_iterator.hpp  is_key.hpp  is_keyring.hpp  is_tuple.hpp  is_user_serializable.hpp  iterator_category.hpp  no_derived_member_shadowing.hpp  remove_cv_ref.hpp  require.hpp  signature.hpp  smallest.hpp  ternary.hpp  typelist.hpp
include/upd/detail/variadic/: at.hpp  clean.hpp  clip.hpp  leaf.hpp  map.hpp  max.hpp  sum.hpp
include/upd/storage/: array_wrapper.hpp  concept.hpp  tuple.hpp  unaligned_data.hpp  unaligned_tuple.hpp
include/upd/storage/detail/: endianess.hpp  signed_representation.hpp
py/: unpadded.py
py/unpadded/: .gitignore  CMakeLists.txt  __init__.py  _details.cpp  client.py  hook.py
src/: endianess.cpp
test/: CMakeLists.txt  action.cpp  basic_ibytestream.cpp  basic_tuple.cpp  buffered_dispatcher.cpp  dispatcher.cpp  dispatcher.hpp  endianess.cpp  ikey.cpp  ikey.hpp  key.cpp  key.hpp  key_base.cpp  key_base.hpp  keyring.cpp  keyring.hpp  keyring11.cpp  keyring11.hpp  main.cpp  main.hpp  order.cpp  order.hpp  product.hpp  static.cpp  storage.hpp  storage_ut.hpp  tuple.cpp  tuple.hpp  tuple_ut.hpp  tuple_view.cpp  tuple_view.hpp  tuple_view_ut.hpp  unaligned_data.cpp  unaligned_data.hpp  unaligned_data_ut.hpp  utility.hpp
test/detail/variadic/: clean.cpp  clip.cpp
test/py/: .gitignore  CMakeLists.txt  module.cpp  test.py
test/snippet/: CMakeLists.txt  callee1  callee2  caller1  caller2  caller3  caller4  caller5  master1.cpp  motion_keyring.hpp  motion_keyring1.hpp  motion_keyring2.hpp  motion_keyring3.hpp  motion_keyring4.hpp  parse_readme.cmake  serialization1  serialization2  shared1.cpp  slave1.cpp
test/snippet/detail/: callee2.cpp  caller2.cpp  caller4.cpp  caller5.cpp  readme_callee.cpp  readme_caller.cpp  serialization.cpp
test/utility/: generators.hpp  mocking.hpp
tool/: .imp  Key-To-Order.cmake  Unpadded.cmake  UnpaddedIWYU.cmake  check
