[build-system]
requires = ["setuptools", "setuptools-scm", "pybind11~=2.11.1"]
build-backend = "setuptools.build_meta"

[project]
name = "unpadded"
version = "0.0"
dependencies = ["cppimport>=22.8.2"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["py"]

[tool.isort]
profile = "black"

